# OpenIW

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/OpenIW/: CMakeLists.txt  IW3  IW4  IW5  T5  T6  bison.simple  snd.cpp
src/OpenIW/aim_assist/: aim_assist.cpp  aim_target_mp.cpp
src/OpenIW/bgame/: bg_animation_mp.cpp  bg_jump.cpp  bg_mantle.cpp  bg_misc.cpp  bg_misctables.cpp  bg_perks_mp.cpp  bg_perks_mp.h  bg_pmove.cpp  bg_public.h  bg_slidemove.cpp  bg_vehicles_mp.cpp  bg_weapons.cpp  bg_weapons.h  bg_weapons_load_db.h  bg_weapons_load_obj.cpp
src/OpenIW/binkxenon/: binktextures.cpp
src/OpenIW/cgame/: cg_ammocounter.cpp  cg_camerashake.cpp  cg_colltree.cpp  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_indicators.cpp  cg_draw_reticles.cpp  cg_drawtools.cpp  cg_effects_load_db.h  cg_effects_load_obj.cpp  cg_event.cpp  cg_hudelem.cpp  cg_info.cpp  cg_laser.cpp  cg_localents.cpp  cg_mem_track.cpp  cg_playerstate.cpp  cg_pose_utils.cpp  cg_rumble.cpp  cg_shellshock.cpp  cg_visionsets.cpp  cg_weapons.cpp  cg_world.cpp  offhandweapons.cpp
src/OpenIW/cgame_mp/: cg_animtree_mp.cpp  cg_client_side_effects_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_draw_net_mp.cpp  cg_ents_mp.cpp  cg_gamepad.cpp  cg_local_mp.h  cg_main_mp.cpp  cg_newdraw_mp.cpp  cg_players_mp.cpp  cg_pose_mp.cpp  cg_pose_mp.h  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  cg_servercmds_mp.cpp  cg_snapshot_mp.cpp  cg_vehicles_mp.cpp  cg_view_mp.cpp  dedicated_cgame.cpp
src/OpenIW/client/: cl_cin.cpp  cl_console.cpp  cl_debugdata.cpp  cl_devgui.cpp  cl_gamepad.cpp  cl_keys.cpp  con_channels.cpp  screen_placement.cpp  screen_placement.h
src/OpenIW/client_mp/: cl_cgame_mp.cpp  cl_input.cpp  cl_main_mp.cpp  cl_main_xenon_mp.cpp  cl_net_chan_mp.cpp  cl_parse_mp.cpp  cl_pose_mp.cpp  cl_rank.cpp  cl_scrn_mp.cpp  cl_ui_mp.cpp  cl_ui_xenon_mp.cpp  cl_voice.cpp  client_mp.h  party.cpp
src/OpenIW/database/: db_assetlist_load.h  db_assetnames.cpp  db_auth.cpp  db_file_load.cpp  db_load.cpp  db_memory.cpp  db_primtypes_load.h  db_registry.cpp  db_stream.cpp  db_stream.h  db_stream_load.cpp  db_stringtable_load.cpp
src/OpenIW/devgui/: devgui.cpp  devgui_input.cpp  devgui_util.cpp
src/OpenIW/dynentity/: dynentity_client.cpp  dynentity_coll.cpp  dynentity_db.h  dynentity_load_db.h  dynentity_load_obj.cpp  dynentity_pieces.cpp
src/OpenIW/effectscore/: fx_archive.cpp  fx_beam.cpp  fx_draw.cpp  fx_draw.h  fx_dvars.cpp  fx_effect_load_db.h  fx_effect_types.h  fx_graph.cpp  fx_load_obj.cpp  fx_marks.cpp  fx_marks.h  fx_postlight.cpp  fx_profile.cpp  fx_random.cpp  fx_random.h  fx_sort.cpp  fx_sprite.cpp  fx_system.cpp  fx_system.h  fx_update.cpp  fx_update_util.cpp  fxcurve.cpp  fxcurve.h
src/OpenIW/game/: bullet.cpp  enthandle.cpp  g_bsp_load_db.h  g_client_fields.cpp  g_debug.cpp  g_helicopter.cpp  g_hudelem.cpp  g_items.cpp  g_load_utils.cpp  g_mem_track.cpp  g_missile.cpp  g_mover.cpp  g_scr_mover.cpp  g_scr_vehicle.cpp  g_svcmds.cpp  g_weapon.cpp  pathnode_load_db.h  scr_const.cpp
src/OpenIW/game_mp/: g_active_mp.cpp  g_client_mp.cpp  g_client_script_cmd_mp.cpp  g_cmds_mp.cpp  g_combat_mp.cpp  g_main_mp.cpp  g_misc_mp.cpp  g_player_corpse_mp.cpp  g_public_mp.h  g_scr_helicopter.cpp  g_scr_main_mp.cpp  g_spawn_mp.cpp  g_team_mp.cpp  g_trigger_mp.cpp  g_utils_mp.cpp  g_vehicles_mp.cpp  player_use_mp.cpp
src/OpenIW/gfx_d3d/: r_add_bsp.cpp  r_add_cmdbuf.cpp  r_add_staticmodel.cpp  r_bsp.cpp  r_bsp_db.h  r_bsp_load_db.h  r_bsp_load_obj.cpp  r_buffers.cpp  r_cinematic.cpp  r_cmdbuf.cpp  r_cmds.cpp  r_debug.cpp  r_debug_alloc.cpp  r_devgui.cpp  r_dobj_skin.cpp  r_dpvs.cpp  r_dpvs.h  r_dpvs_dynmodel.cpp  r_dpvs_entity.cpp  r_dpvs_sceneent.cpp  r_dpvs_static.cpp  r_draw_bsp.cpp  r_draw_lit.cpp  r_draw_material.cpp  r_draw_method.cpp  r_draw_pixelshader.cpp  r_draw_shadowablelight.cpp  r_draw_staticmodel.cpp  r_draw_sunshadow.cpp  r_draw_xmodel.cpp  r_drawsurf.cpp  r_drawsurf.h  r_drawsurf_inline.h  r_dvars.cpp  r_fence_xbox.h  r_fog.cpp  r_font.cpp  r_font.h  r_font_load_db.h  r_image.cpp  (+86 more)
src/OpenIW/physics/: phys_alloc.h  phys_coll_boxbrush.cpp  phys_coll_capsulebrush.cpp  phys_coll_cylinderbrush.cpp  phys_coll_local.h  phys_contacts.cpp  phys_local.h  phys_ode.cpp  phys_world_collision.cpp  physpreset_load_db.h
src/OpenIW/punkbuster/: pbmd5.cpp
src/OpenIW/qcommon/: bitarray.h  buildnumber_mp.c  cm_load.cpp  (+43 more)
src/patches/: CMakeLists.txt  IW3.cpp  IW4.cpp  IW5.cpp  T5.cpp  T6.cpp
(+186 files in other folders)
